--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,3 @@
-This is the supporting data and softwares for paper "Genome-wide signatures of ecological transition in marine mammals"
+###Supplementary Data and Software for Marine Mammal Paper.
+
+
